--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "web-vitals": "^2.1.4",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "http-proxy-middleware": "^2.0.6",
+    "webpack": "^5.74.0",
+    "webpack-manifest-plugin": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +37,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^4.10.0"
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
+ },
+ "engines": {
+   "node": "16.16.0",
+   "npm": "8.13.2"
+ }
 }
