--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "web-vitals": "^2.1.4",
     "react-scripts": "^5.0.1",
-    "http-proxy-middleware": "^2.0.6",
-    "webpack": "^5.74.0",
-    "webpack-manifest-plugin": "^5.0.0"
+    "remixicon": "^2.5.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,15 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "webpack-dev-server": "^4.10.0"
-  },
-  "overrides": {
-    "autoprefixer": "10.4.5"
- },
- "engines": {
-   "node": "16.16.0",
-   "npm": "8.13.2"
- }
+  }
 }
