--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,5 +37,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
+ },
+ "engines": {
+   "node": "16.16.0",
+   "npm": "8.13.2"
+ }
 }
